--- a/modules/melis/client/less/meli.less
+++ b/modules/melis/client/less/meli.less
@@ -31,7 +31,7 @@ body {
 }
 
 .ch-loading-big {
-  background-image: url(/lib/chico/dist/assets/loading-big.gif);
+  background-image: url('/lib/chico/dist/assets/loading-big.gif');
   width: 36px;
   height: 36px;
   display: inline-block;
